--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.13",
-    "aws-amplify": "^6.4.0",
+    "@aws-amplify/ui-react": "^6.5.2",
+    "aws-amplify": "^6.6.4",
+    "aws-sdk": "^2.1691.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
